--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -12,6 +12,7 @@
   "horizontalAxisCategory": "横轴分类",
   "verticalAxisCategory": "纵轴分类",
   "chooseField": "选择字段",
+  "noneGroup": "无分组",
   "up": "上",
   "middle": "中",
   "down": "下",
