--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -27,6 +27,10 @@
   "rightUp": "右-上",
   "rightMiddle": "右-中",
   "rightDown": "右-下",
+  "personFieldPlaceholder": "请选择人员字段",
+  "tablePlaceholder": "请选择数据表",
+  "horizontalAxisFieldPlaceholder": "请选择横轴字段",
+  "verticalAxisFieldPlaceholder": "请选择纵轴字段",
   "pleaseEnterText": "请输入文字",
   "cellTitle": "单元格标题",
   "addCategory": "添加分类",
