fix(xiong) upload files

--- a/public/locales/zh-CN/translation.json
+++ b/public/locales/zh-CN/translation.json
@@ -30,7 +30,13 @@
   "personFieldPlaceholder": "请选择人员字段",
   "tablePlaceholder": "请选择数据表",
   "horizontalAxisFieldPlaceholder": "请选择横轴字段",
+  "horizontalAxisLeftFieldPlaceholder": "请选择横轴左字段",
+  "horizontalAxisMiddleFieldPlaceholder": "请选择横轴中字段",
+  "horizontalAxisRightFieldPlaceholder": "请选择横轴右字段",
   "verticalAxisFieldPlaceholder": "请选择纵轴字段",
+  "verticalAxisUpFieldPlaceholder": "请选择纵轴上字段",
+  "verticalAxisMiddleFieldPlaceholder": "请选择纵轴中字段",
+  "verticalAxisDownFieldPlaceholder": "请选择纵轴下字段",
   "pleaseEnterText": "请输入文字",
   "cellTitle": "单元格标题",
   "addCategory": "添加分类",
